--- a/app/views/pages/feeds.html.erb
+++ b/app/views/pages/feeds.html.erb
@@ -2,7 +2,8 @@
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:schema="http://schema.org/">
     <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-      <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+       <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic" rel="stylesheet" type="text/css">
+       <link href="http://fonts.googleapis.com/css?family=Exo+2:900italic,100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic" rel="stylesheet" type="text/css">
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
       <title>Open Data for Development - Feeds</title>
     </head>
@@ -12,57 +13,72 @@
               <%= image_tag("logo-od4d.png", :alt => "Logo OD4D") %>
             </nav>
         </header>
-        <section class="main"><br>
+         <section class="main"><br>
             <h1 property="schema:title">Partners Feeds Page Title Goes Here</h1>
-                <article class="feeds" property="schema:description">
-                    <h2>Open Contracting Data Standard Draft Released for Comment</h2>
-                    <p class="author">Author: Michael Roberts</h3>
-                    <p class="category">PROJECTS<h4>
-                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><b>first release of the Open Contracting Data Standard (OCDS)</b></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present &#8230;</p>
+                <article class="feeds rss" property="schema:description">
+                    <h3 >Open Contracting Data Standard Draft Released for Comment</h3>
+                    <p class="author">Author: Michael Roberts
+                    <p class="category">PROJECTS</p>
+                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><em>first release of the Open Contracting Data Standard (OCDS)</em></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present …</p>
                     <p class="date">Thu, 26 Jun 2014 17:57:45</p>
+                    <button class="button">Read More</button>
                 </article>
-                <article class="feeds" property="schema:description">
-                    <h2>Open Contracting Data Standard Draft Released for Comment</h2>
-                    <p class="author">Author: Michael Roberts</h3>
-                    <p class="category">PROJECTS<h4>
-                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><b>first release of the Open Contracting Data Standard (OCDS)</b></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present &#8230;</p>
+                <article class="feeds rss" property="schema:description">
+                    <h3 >Open Contracting Data Standard Draft Released for Comment</h3>
+                    <p class="author">Author: Michael Roberts
+                    <p class="category">PROJECTS</p>
+                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><em>first release of the Open Contracting Data Standard (OCDS)</em></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present …</p>
                     <p class="date">Thu, 26 Jun 2014 17:57:45</p>
-                </article>    
-                <article class="feeds" property="schema:description">
-                    <h2>Open Contracting Data Standard Draft Released for Comment</h2>
-                    <p class="author">Author: Michael Roberts</h3>
-                    <p class="category">PROJECTS<h4>
-                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><b>first release of the Open Contracting Data Standard (OCDS)</b></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present &#8230;</p>
-                    <p class="date">Thu, 26 Jun 2014 17:57:45</p>
-                </article>    
-                <article class="feeds" property="schema:description">
-                    <h2>Open Contracting Data Standard Draft Released for Comment</h2>
-                    <p class="author">Author: Michael Roberts</h3>
-                    <p class="category">PROJECTS<h4>
-                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><b>first release of the Open Contracting Data Standard (OCDS)</b></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present &#8230;</p>
-                    <p class="date">Thu, 26 Jun 2014 17:57:45</p>
-                </article> 
-                <article class="feeds" property="schema:description">
-                    <h2>Open Contracting Data Standard Draft Released for Comment</h2>
-                    <p class="author">Author: Michael Roberts</h3>
-                    <p class="category">PROJECTS<h4>
-                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><b>first release of the Open Contracting Data Standard (OCDS)</b></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present &#8230;</p>
-                    <p class="date">Thu, 26 Jun 2014 17:57:45</p>
-                </article>    
-                <article class="feeds" property="schema:description">
-                    <h2>Open Contracting Data Standard Draft Released for Comment</h2>
-                    <p class="author">Author: Michael Roberts</h3>
-                    <p class="category">PROJECTS<h4>
-                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><b>first release of the Open Contracting Data Standard (OCDS)</b></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present &#8230;</p>
-                    <p class="date">Thu, 26 Jun 2014 17:57:45</p>
+                    <button class="button">Read More</button>
                 </article>
+                <article class="feeds rss" property="schema:description">
+                    <h3 >Open Contracting Data Standard Draft Released for Comment</h3>
+                    <p class="author">Author: Michael Roberts
+                    <p class="category">PROJECTS</p>
+                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><em>first release of the Open Contracting Data Standard (OCDS)</em></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present …</p>
+                    <p class="date">Thu, 26 Jun 2014 17:57:45</p>
+                    <button class="button">Read More</button>
+                </article>
+                <article class="feeds rss" property="schema:description">
+                    <h3 >Open Contracting Data Standard Draft Released for Comment</h3>
+                    <p class="author">Author: Michael Roberts
+                    <p class="category">PROJECTS</p>
+                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><em>first release of the Open Contracting Data Standard (OCDS)</em></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present …</p>
+                    <p class="date">Thu, 26 Jun 2014 17:57:45</p>
+                    <button class="button">Read More</button>
+                </article>
+                <article class="feeds rss" property="schema:description">
+                    <h3 >Open Contracting Data Standard Draft Released for Comment</h3>
+                    <p class="author">Author: Michael Roberts
+                    <p class="category">PROJECTS</p>
+                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><em>first release of the Open Contracting Data Standard (OCDS)</em></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present …</p>
+                    <p class="date">Thu, 26 Jun 2014 17:57:45</p>
+                    <button class="button">Read More</button>
+                </article>
+                <article class="feeds rss" property="schema:description">
+                    <h3 >Open Contracting Data Standard Draft Released for Comment</h3>
+                    <p class="author">Author: Michael Roberts
+                    <p class="category">PROJECTS</p>
+                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><em>first release of the Open Contracting Data Standard (OCDS)</em></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present …</p>
+                    <p class="date">Thu, 26 Jun 2014 17:57:45</p>
+                    <button class="button">Read More</button>
+                </article>
+                <article class="feeds rss" property="schema:description">
+                    <h3 >Open Contracting Data Standard Draft Released for Comment</h3>
+                    <p class="author">Author: Michael Roberts
+                    <p class="category">PROJECTS</p>
+                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><em>first release of the Open Contracting Data Standard (OCDS)</em></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present …</p>
+                    <p class="date">Thu, 26 Jun 2014 17:57:45</p>
+                    <button class="button">Read More</button>
+                </article>
+        </section>  
         </section>      
         <footer class="inner-shadow clear">
             <section class="center-box out-shadow">
-                <nav><p style="float: left;">
+                <nav><p class="footbar">
                 <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a> 
                 </p>
-                <p style="float: right; color:#b5b5b5; font-size: 16px;">
+                <p class="copyright">
                  © 2014 Open Data for Development - All Rights Reserved.   
                 </p>
                 <nav>
