- Changed Articles header - Set Labels for Author and Date on the feeds

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,20 +8,28 @@
       <title>Open Data for Development - Feeds</title>
     </head>
     <body>
-        <header>
-            <nav>
-              <%= image_tag("logo-od4d.png", :alt => "Logo OD4D") %>
-            </nav>
-        </header>
+    <header>
+      <nav>
+        <section class="logo"> 
+        <%= image_tag("logo-od4d2.png", :alt => "Logo OD4D") %>
+        </section> 
+        <section class="center-nenu">  
+          <ul class="header-menu">
+          <li><a href="/about">About the Project</a></li>
+          <li><a href="/articles/">Connected Network</a></li>
+        </ul> 
+        </section> 
+      </nav>
+    </header>
          <section class="main"><br>
-            <h1 property="schema:title">Partners Feeds Page Title Goes Here</h1>
+            <h1 property="schema:title">Connected network</h1>
                 <% @articles.each do |article| %>
                 	<article class="feeds rss">
                 		<h3><%= article.title %></h3>
-                		<p class="author"> <%= article.author %></p>
+                		<p class="author">Author: <%= article.author %></p>
                 		<p class="category"> <%= article.articleSection %></p>
                         <p class="summary"> <%= article.summary || article.description %></p>
-                        <p class="date"> <%= article.datePublished %></p>
+                        <p class="date">Date: <%= article.datePublished %></p>
                         <button class="button"><a href=<%= article.url %>>Read More</a></button>
                 	</article>
                 <% end %>
