--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,8 +2,12 @@
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:schema="http://schema.org/">
     <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-       <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic" rel="stylesheet" type="text/css">
-       <link href="http://fonts.googleapis.com/css?family=Exo+2:900italic,100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic" rel="stylesheet" type="text/css">
+        <link href='http://fonts.googleapis.com/css?family=Exo:100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Exo+2:900italic,100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
       <title>Open Data for Development - Feeds</title>
     </head>
@@ -13,12 +17,13 @@
         <section class="logo"> 
         <%= image_tag("logo-od4d2.png", :alt => "Logo OD4D") %>
         </section> 
+
         <section class="center-nenu">  
           <ul class="header-menu">
-          <li><a href="/about">About the Project</a></li>
-          <li><a href="/articles/">Connected Network</a></li>
+          <li><a href="/about">ABOUT THE PROJECT</a></li>
+          <li><a href="/articles/">CONNECTED NETWORK</a></li>
         </ul> 
-        </section> 
+        </section>  
       </nav>
     </header>
          <section class="main"><br>
