--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,64 +1,24 @@
-    <!DOCTYPE HTML>
-    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:schema="http://schema.org/">
-    <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href='http://fonts.googleapis.com/css?family=Exo:100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Exo+2:900italic,100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
-      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-      <title>Open Data for Development - Feeds</title>
-    </head>
-    <body>
-    <header>
-     <section class="head-align">
-      <div class="logo">
-        <%= image_tag("logo-od4d2.png", :alt => "Logo OD4D") %>
-      </div>
-      <nav class="center-nenu">
-        <ul class="header-menu">
-          <li><a href="/about">ABOUT THE PROJECT</a></li>
+<% content_for :head do %>
+  <title>Open Data for Development - Feeds</title>
+<% end %>
 
-          <li><a href="/articles/">CONNECTED NETWORK</a></li>
-        </ul>
-      </nav>
-      <div class="contribute">
-        <a href="https://github.com/W3CBrasil/OD4D" target="blank"><%= image_tag("github32.png", :alt => "contribute on github") %></a>
-      </div>
-     </section>
-  </header>
-         <section class="main"><br>
-            <h1>Partners Feeds</h1>
-                <% @articles.each do |article| %>
-                	<article class="feeds rss" resource="<%=article.url%>" typeof="schema:Article">
-                		<h3 property="schema:title"><%= article.title %></h3>
-                		<p class="author" property="schema:author"> <%= article.author %></p>
-                		<p class="category" property="schema:articleSection"> <%= article.articleSection %></p>
-                        <%if article.summary.blank?%>
-                            <p class="summary" property="schema:description"> <%= article.description %></p>
-                        <%else%>
-                            <p class="summary" property="schema:summary"> <%= article.summary%></p>
-                        <%end%>
-                        <%if !article.datePublished.nil? then%>
-                            <p class="date" property="schema:datePublished" content="<%=article.datePublished.iso8601%>"> <%=article.datePublished.strftime("%m/%d/%Y") %></p>
-                        <%end%>
-                        <button class="button"><a property="schema:url" href=<%=article.url%>>Read More</a></button>
-                	</article>
-                <% end %>
-        </section>
-        </section>
-        <footer class="inner-shadow clear">
-            <section class="center-box out-shadow">
-                <nav><p class="footbar">
-                <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a>
-                </p>
-                <p class="copyright">
-                 © 2014 Open Data for Development - All Rights Reserved.
-                </p>
-                <nav>
-            </section>
-        </footer>
-    </body>
-    </html>
+  <section class="main">
+    <br>
+    <h1>Partners Feeds</h1>
+      <% @articles.each do |article| %>
+        <article class="feeds rss" resource="<%=article.url%>" typeof="schema:Article">
+      		<h3 property="schema:title"><%= article.title %></h3>
+      		<p class="author" property="schema:author"> <%= article.author %></p>
+      		<p class="category" property="schema:articleSection"> <%= article.articleSection %></p>
+          <%if article.summary.blank?%>
+            <p class="summary" property="schema:description"> <%= article.description %></p>
+          <%else%>
+            <p class="summary" property="schema:summary"> <%= article.summary%></p>
+          <%end%>
+          <%if !article.datePublished.nil? then%>
+            <p class="date" property="schema:datePublished" content="<%=article.datePublished.iso8601%>"> <%=article.datePublished.strftime("%m/%d/%Y") %></p>
+          <%end%>
+          <button class="button"><a property="schema:url" href=<%=article.url%>>Read More</a></button>
+      	</article>
+      <% end %>
+  </section>
