--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,50 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:schema="http://schema.org/">
 <head>
-  <title>Od4d</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href='http://fonts.googleapis.com/css?family=Exo:100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Exo+2:900italic,100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+    <%= yield :head %>
 </head>
 <body>
+  <header>
+   <section class="head-align">
+    <div class="logo">
+      <%= image_tag("logo-od4d2.png", :alt => "Logo OD4D") %>
+    </div>
+    <nav class="center-nenu">
+      <ul class="header-menu">
+        <li><a href="/about">ABOUT THE PROJECT</a></li>
 
-<%= yield %>
+        <li><a href="/articles/">CONNECTED NETWORK</a></li>
+      </ul>
+    </nav>
+    <div class="contribute">
+      <a href="https://github.com/W3CBrasil/OD4D" target="blank"><%= image_tag("github32.png", :alt => "contribute on github") %></a>
+    </div>
+   </section>
+  </header>
 
+  <%= yield %>
+
+  <footer class="inner-shadow clear">
+    <section class="center-box out-shadow">
+      <nav>
+        <p class="footbar">
+          <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a>
+        </p>
+        <p class="copyright">
+          © 2014 Open Data for Development - All Rights Reserved.
+        </p>
+      <nav>
+    </section>
+  </footer>
 </body>
 </html>
