--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,131 +1,89 @@
+<% content_for :head do %>
+  <title>Open Data for Development - About</title>
+<% end %>
 
-<!DOCTYPE HTML>
-  <html xmlns="http://www.w3.org/1999/xhtml" xmlns:schema="http://schema.org/">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href='http://fonts.googleapis.com/css?family=Exo:100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Exo+2:900italic,100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <title>Open Data for Development - About</title>
-  </head>
-  <body>
-    <header>
-     <section class="head-align"> 
-      <div class="logo"> 
-        <%= image_tag("logo-od4d2.png", :alt => "Logo OD4D") %>
-      </div> 
-      <nav class="center-nenu">  
-        <ul class="header-menu">
-          <li><a href="/about">ABOUT THE PROJECT</a></li>
-          
-          <li><a href="/articles/">CONNECTED NETWORK</a></li>
-        </ul>
-      </nav>
-      <div class="contribute">
-        <a href="https://github.com/W3CBrasil/OD4D" target="blank"><%= image_tag("github32.png", :alt => "contribute on github") %></a>
-      </div>
-     </section> 
-  </header>
-    <section class="main" resource="#about-od4d" typeof="schema:Article">
-      <h1 property="schema:title">About the Project</h1>
-      <meta property="schema:datePublished" content="2014-06-20"/>
-      <meta property="schema:wordCount" content="503"/>
-      <meta property="schema:inLanguage" content="English"/>
-      <meta property="schema:copyrightHolder" content="W3C"/>
-      <meta property="schema:headline" content="About Open Data 4 Development"/>
-      <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
-      <meta property="schema:keywords" content="about;od4d"/>
-      <section id="Video">
-        <p resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
-          <meta property="schema:name" content="Open Government Data and OD4D "/>
-          <div class="video-container">
-            <iframe property="schema:embedUrl" src="//player.vimeo.com/video/69632849"> </iframe>
-          </div>
+  <section class="main" resource="#about" typeof="schema:Article">
+    <h1 property="schema:title">About the Project</h1>
+    <meta property="schema:datePublished" content="2014-06-20"/>
+    <meta property="schema:wordCount" content="503"/>
+    <meta property="schema:inLanguage" content="English"/>
+    <meta property="schema:copyrightHolder" content="W3C"/>
+    <meta property="schema:headline" content="About Open Data 4 Development"/>
+    <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
+    <meta property="schema:keywords" content="about;od4d"/>
+    <section id="Video">
+      <p resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
+        <meta property="schema:name" content="Open Government Data and OD4D "/>
+        <div class="video-container">
+          <iframe property="schema:embedUrl" src="//player.vimeo.com/video/69632849"> </iframe>
+        </div>
+      </p>
+    </section>
+    <section property="schema:description">
+      <section id="Introduction">
+        <h2>Introduction</h2>
+        <p>
+        Sharing governmental information in open, accessible and structured formats could substantially increase transparency and accountability in public policy design and implementation. Furthermore, it enables a broader engagement of civil society in these processes, fosters improvements in public administration’s efficiency and favors the generation of new services for citizens. Hence, opening data and the role that society’ can play in opening processes are key to promote a more effective public administration and prompt the development of a more equal knowledge economy.</p>
+        <p> Based on this premise, the <a href="http://www.w3c.org"><b>W3C Brazil</b></a> and the Economic Commission for Latin America and the Caribbean (<a href="http://www.eclac.org/"><b>ECLAC</b></a>) led a project on emerging <b>impacts and potentialities of open data for public policy in Latin America and the Caribbean</b>, funded by the International Development and Research Center of Canada (<a href="http://www.idrc.ca/EN/Pages/default.aspx"><b>IDRC</b></a>).
         </p>
-      </section>
-      <section property="schema:description">
-        <section id="Introduction">
-          <h2>Introduction</h2>
-          <p>
-          Sharing governmental information in open, accessible and structured formats could substantially increase transparency and accountability in public policy design and implementation. Furthermore, it enables a broader engagement of civil society in these processes, fosters improvements in public administration’s efficiency and favors the generation of new services for citizens. Hence, opening data and the role that society’ can play in opening processes are key to promote a more effective public administration and prompt the development of a more equal knowledge economy.</p>
-          <p> Based on this premise, the <a href="http://www.w3c.org"><b>W3C Brazil</b></a> and the Economic Commission for Latin America and the Caribbean (<a href="http://www.eclac.org/"><b>ECLAC</b></a>) led a project on emerging <b>impacts and potentialities of open data for public policy in Latin America and the Caribbean</b>, funded by the International Development and Research Center of Canada (<a href="http://www.idrc.ca/EN/Pages/default.aspx"><b>IDRC</b></a>).
-          </p>
-          <p>
-          This project is identified by the brand <b>OD4D – Open Data for Development</b>. This initiative seeks to expand and produce further knowledge on open data and its potential to improve the quality of public policies in Latin America and the Caribbean. Furthermore, it aims at offering an interactive platform for dialogue and exchange among the different actors (governments, citizens, developers, academics, etc.) involved in the debate on open government data, at regional as well as  global level.
-          </p>
-        </section>
-      </section>
-
-      <section property="schema:articleBody" class="articleContainer">
-        <section id="Objectives" class="leftColumn">
-          <h2>OD4D Objectives</h2>
-          <p>
-          The general objective of this research project is to contribute to the development of Open Data strategies leading to accountability, innovative services and effective public policies in strategic segments, thus promoting a more inclusive economy of knowledge in Latin America and the Caribbean. In order to achieve this, the project investigates the potential of Open Data in public policies on 3 fronts: <b>transparency, new services, and equitable development.</b>
-          </p>
-        </section>
-
-        <section id="Specific-Tasks" class="rightColumn">
-          <h2>OD4D 6 specific tasks</h2>
-          <ul>
-            <li>To <b>map out</b> the main initiatives in Latin America and the Caribbean for structured economic, social and environmental data sharing and to design a methodological framework to examine the relationship between opening data and the quality of public policies.</li>
-            <li> To study and discuss alternative strategies to foster <b>technical training</b> in governmental agencies and observatories in the region, thus implementing open data repositories for the design, monitoring and assessment of public policies.</li>
-            <li>
-            To support <b>research networks</b> in Latin America and theCaribbean in producing new information and creating innovative applications and services based on open data.
-            </li>
-            <li>
-            To <b>examine</b> the relationship between more inclusive economic development and the opening of data in key economic segments.
-            </li>
-            <li>
-            To <b>raise awareness</b> among the community of public policy makers, public servants and researches of the potential of Open Data and appropriate strategies for its successful implementation.
-            </li>
-            <li>
-            To <b>assess the potential</b> of Open Data strategies in the design and implementation of public policies aimed at promoting economic development and social inclusion in Latin American countries and in the Caribbean.
-            </li>
-          </ul>
-        </section>
-
-        <section id="Intended-Results">
-          <h2>Intended results:</h2>
-          <ul>
-            <li>
-            Raising awareness among governments and civil society of the usefulness and potential of Open Data in public policies.
-            </li>
-            <li>
-            Supporting capacity building for the opening and the “meaningful use” of government Data.
-            </li>
-            <li>
-            Fostering the development of new data opening initiatives in the region, with a long-term and sustainable perspective.
-            </li>
-          </ul>
-          <p>Check out the whole OD4D proposal (in English): <a href="http://www.od4d.org/wp-content/uploads/2012/10/Open-Data-Projet-Proposal-29-de-marzo-31.pdf"><b>Open-Data-Projet-Proposal</b></a> - PDF (616KB)</p>
-        </section>
-      </section>
-
-      <section>
-        <p>Author:
-          <span resource="#w3c-organization" property="schema:author" typeof="schema:Organization">
-            <span property="schema:name">
-                W3C
-            </span>
-          </span>
+        <p>
+        This project is identified by the brand <b>OD4D – Open Data for Development</b>. This initiative seeks to expand and produce further knowledge on open data and its potential to improve the quality of public policies in Latin America and the Caribbean. Furthermore, it aims at offering an interactive platform for dialogue and exchange among the different actors (governments, citizens, developers, academics, etc.) involved in the debate on open government data, at regional as well as  global level.
         </p>
       </section>
     </section>
-    <footer class="inner-shadow clear">
-      <section class="center-box out-shadow">
-        <nav>
-          <p class="footbar">
-            <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a>
-          </p>
-          <p class="copyright">
-            © 2014 Open Data for Development - All Rights Reserved.
-          </p>
-        <nav>
+
+    <section property="schema:articleBody" class="articleContainer">
+      <section id="Objectives" class="leftColumn">
+        <h2>OD4D Objectives</h2>
+        <p>
+        The general objective of this research project is to contribute to the development of Open Data strategies leading to accountability, innovative services and effective public policies in strategic segments, thus promoting a more inclusive economy of knowledge in Latin America and the Caribbean. In order to achieve this, the project investigates the potential of Open Data in public policies on 3 fronts: <b>transparency, new services, and equitable development.</b>
+        </p>
       </section>
-    </footer>
-  </body>
-  </html>
+
+      <section id="Specific-Tasks" class="rightColumn">
+        <h2>OD4D 6 specific tasks</h2>
+        <ul>
+          <li>To <b>map out</b> the main initiatives in Latin America and the Caribbean for structured economic, social and environmental data sharing and to design a methodological framework to examine the relationship between opening data and the quality of public policies.</li>
+          <li> To study and discuss alternative strategies to foster <b>technical training</b> in governmental agencies and observatories in the region, thus implementing open data repositories for the design, monitoring and assessment of public policies.</li>
+          <li>
+          To support <b>research networks</b> in Latin America and theCaribbean in producing new information and creating innovative applications and services based on open data.
+          </li>
+          <li>
+          To <b>examine</b> the relationship between more inclusive economic development and the opening of data in key economic segments.
+          </li>
+          <li>
+          To <b>raise awareness</b> among the community of public policy makers, public servants and researches of the potential of Open Data and appropriate strategies for its successful implementation.
+          </li>
+          <li>
+          To <b>assess the potential</b> of Open Data strategies in the design and implementation of public policies aimed at promoting economic development and social inclusion in Latin American countries and in the Caribbean.
+          </li>
+        </ul>
+      </section>
+
+      <section id="Intended-Results">
+        <h2>Intended results:</h2>
+        <ul>
+          <li>
+          Raising awareness among governments and civil society of the usefulness and potential of Open Data in public policies.
+          </li>
+          <li>
+          Supporting capacity building for the opening and the “meaningful use” of government Data.
+          </li>
+          <li>
+          Fostering the development of new data opening initiatives in the region, with a long-term and sustainable perspective.
+          </li>
+        </ul>
+        <p>Check out the whole OD4D proposal (in English): <a href="http://www.od4d.org/wp-content/uploads/2012/10/Open-Data-Projet-Proposal-29-de-marzo-31.pdf"><b>Open-Data-Projet-Proposal</b></a> - PDF (616KB)</p>
+      </section>
+    </section>
+
+    <section>
+      <p>Author:
+        <span resource="#w3c-organization" property="schema:author" typeof="schema:Organization">
+          <span property="schema:name">
+              W3C
+          </span>
+        </span>
+      </p>
+    </section>
+  </section>
