--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     <section class="center-box out-shadow">
       <nav>
         <p class="footbar">
-          <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a>
+          <%= link_to("Terms and conditions", controller: "pages", action: "terms_and_conditions") %>
         </p>
         <p class="copyright">
           © 2014 Open Data for Development - All Rights Reserved.
