Replacing schema:title with schema:headline since schema:title does not exist.

--- a/app/views/pages/terms_and_conditions.html.erb
+++ b/app/views/pages/terms_and_conditions.html.erb
@@ -3,14 +3,13 @@
 <% end %>
 
   <section class="main" resource="#terms-and-conditions" typeof="schema:Article">
-    <h1 property="schema:title">General Terms and Conditions of use of the Portal OD4D - Open Data For Development</h1>
-    <meta property="schema:datePublished" content="2014-06-20"/>
+    <h1 property="schema:headline">General Terms and Conditions of use of the Portal OD4D - Open Data For Development</h1>
+    <meta property="schema:datePublished" content="2014-07-08"/>
     <meta property="schema:wordCount" content="503"/>
     <meta property="schema:inLanguage" content="English"/>
     <meta property="schema:copyrightHolder" content="W3C"/>
-    <meta property="schema:headline" content="About Open Data 4 Development"/>
     <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
-    <meta property="schema:keywords" content="about;od4d"/>
+    <meta property="schema:keywords" content="terms;conditions;od4d"/>
 
     <p>1. Acceptance of the Terms of Use by Users</p>
     <p>1.1 For users to have permission to freely use the contents and services provided by the Portal they must first read and expressly and unconditionally agree with these Terms of Use, the Privacy Policy, as well as with the Specific Terms of the versions currently published on the Portal.</p>
