--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,12 +3,11 @@
 <% end %>
 
   <section class="main" resource="#about" typeof="schema:Article" role="main">
-    <h1 property="schema:title">About the Project</h1>
+    <h1 property="schema:headline">About the Project</h1>
     <meta property="schema:datePublished" content="2014-06-20"/>
     <meta property="schema:wordCount" content="503"/>
     <meta property="schema:inLanguage" content="English"/>
     <meta property="schema:copyrightHolder" content="W3C"/>
-    <meta property="schema:headline" content="About Open Data 4 Development"/>
     <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
     <meta property="schema:keywords" content="about;od4d"/>
     <section id="Video">
