Modified alt property in logo image on about page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <header>
    <section class="head-align">
     <div class="logo">
-      <%= image_tag("logo-od4d2.png", :alt => "Logo OD4D") %>
+      <%= image_tag("logo-od4d2.png", :alt => "Open Data for Development") %>
     </div>
     <nav class="center-nenu">
       <ul class="header-menu">
