--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
   <title>Open Data for Development - About</title>
 <% end %>
 
-  <section class="main" resource="#about" typeof="schema:Article">
+  <section class="main" resource="#about" typeof="schema:Article" role="main">
     <h1 property="schema:title">About the Project</h1>
     <meta property="schema:datePublished" content="2014-06-20"/>
     <meta property="schema:wordCount" content="503"/>
