Created route, link and basic page for how to.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,8 @@
     <nav class="center-nenu" role="navigation">
       <ul class="header-menu">
         <li><a href="/about">ABOUT THE PROJECT</a></li>
-
-        <li><a href="/articles/">CONNECTED NETWORK</a></li>
+        <li><a href="/articles">CONNECTED NETWORK</a></li>
+        <li><a href="/how-to-create-a-semantic-page">HOW TO</a></li>
       </ul>
     </nav>
     <div class="contribute">
