--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header role="banner">
-   <section class="head-align">
+   <section class="center-align">
     <div class="logo">
       <%= image_tag("logo-od4d2.png", :alt => "Open Data for Development") %>
     </div>
@@ -36,14 +36,14 @@
 
   <footer class="inner-shadow clear" role="contentinfo">
     <section class="center-box out-shadow">
-      <nav>
-        <p class="footbar">
+        <div class="center-align">
+          <p class="footbar">
           <%= link_to("Terms and conditions", controller: "pages", action: "terms_and_conditions") %>
         </p>
         <p class="copyright">
           © 2014 Open Data for Development - All Rights Reserved.
         </p>
-      <nav>
+      </div>
     </section>
   </footer>
 </body>
